--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.3",
+    "prettier": "^3.1.0"
   }
 }
