--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "totori-website",
+  "name": "totori-page",
   "version": "1.0.0",
-  "description": "",
+  "description": "Craig Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -H 0.8.0.0",
+    "build": "next build",
+    "prettier": "prettier -write .",
+    "lint": "next lint "
+   
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Tototri",
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.10",
+    "framer-motion": "^10.16.9",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
