--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
+
+
+
+
 {
-  "name": "totori-page",
+  "name": "totori-homepage",
   "version": "1.0.0",
-  "description": "Craig Website",
-  "main": "index.js",
+  "description": "Craig's website",
   "scripts": {
-    "dev": "next dev -H 0.8.0.0",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "prettier": "prettier -write .",
-    "lint": "next lint "
-   
+    "start": "next start",
+    "prettier": "prettier --write .",
+    "lint": "next lint"
   },
   "keywords": [],
-  "author": "Tototri",
+  "author": "San Wu ",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.9",
-    "next": "^14.0.3",
+    "@vercel/analytics": "^1.1.1",
+    "framer-motion": "^10.16.4",
+    "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "three": "^0.157.0"
   },
   "devDependencies": {
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.3",
-    "prettier": "^3.1.0"
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "prettier": "^3.0.3"
   }
 }
